<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".WorkEntryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <!-- Header -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_entry_title"
            style="@style/HeaderText"
            android:gravity="center"
            android:layout_marginBottom="@dimen/spacing_large" />

        <!-- Time Section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewStyle"
            android:layout_marginBottom="@dimen/spacing_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_label"
                    style="@style/SubHeaderText"
                    android:layout_marginBottom="@dimen/spacing_small" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Select time"
                        android:focusable="false"
                        android:clickable="true"
                        android:drawableEnd="@android:drawable/ic_menu_recent_history"
                        android:padding="@dimen/text_field_padding"
                        android:background="@drawable/edit_text_background" />

                    <Button
                        android:id="@+id/btnCurrentTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_time"
                        style="@style/SecondaryButton"
                        android:layout_marginStart="@dimen/spacing_small" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Location Section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewStyle"
            android:layout_marginBottom="@dimen/spacing_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_label"
                    style="@style/SubHeaderText"
                    android:layout_marginBottom="@dimen/spacing_small" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Enter location"
                        android:inputType="text"
                        android:padding="@dimen/text_field_padding"
                        android:background="@drawable/edit_text_background" />

                    <Button
                        android:id="@+id/btnCurrentLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_location"
                        style="@style/SecondaryButton"
                        android:layout_marginStart="@dimen/spacing_small" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Task Description Section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewStyle"
            android:layout_marginBottom="@dimen/spacing_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_description_label"
                    style="@style/SubHeaderText"
                    android:layout_marginBottom="@dimen/spacing_small" />

                <EditText
                    android:id="@+id/etTaskDescription"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:hint="Describe what you accomplished"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    android:padding="@dimen/text_field_padding"
                    android:background="@drawable/edit_text_background" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Duration Section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewStyle"
            android:layout_marginBottom="@dimen/spacing_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_label"
                    style="@style/SubHeaderText"
                    android:layout_marginBottom="@dimen/spacing_small" />

                <EditText
                    android:id="@+id/etDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="e.g., 2.5"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/text_field_padding"
                    android:background="@drawable/edit_text_background" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Notes Section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewStyle"
            android:layout_marginBottom="@dimen/spacing_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notes_label"
                    style="@style/SubHeaderText"
                    android:layout_marginBottom="@dimen/spacing_small" />

                <EditText
                    android:id="@+id/etNotes"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="Additional notes (optional)"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    android:padding="@dimen/text_field_padding"
                    android:background="@drawable/edit_text_background" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Action Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_medium">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/cancel"
                style="@style/SecondaryButton"
                android:layout_marginEnd="@dimen/spacing_small" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/save_entry"
                style="@style/PrimaryButton"
                android:layout_marginStart="@dimen/spacing_small" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>