<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_light"
    tools:context=".ProfileManagerActivity">

    <!-- Header -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_manager_title"
        style="@style/HeaderText"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@color/white"
        android:elevation="4dp" />

    <!-- Create New Profile Section -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardViewStyle"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create New Profile"
                style="@style/SubHeaderText"
                android:layout_marginBottom="@dimen/spacing_medium" />

            <EditText
                android:id="@+id/etNewProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_name"
                android:inputType="text"
                android:padding="@dimen/text_field_padding"
                android:background="@drawable/edit_text_background"
                android:layout_marginBottom="@dimen/spacing_medium" />

            <Button
                android:id="@+id/btnCreateProfile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/create_profile"
                style="@style/PrimaryButton" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Current Profile Display -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardViewStyle"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/spacing_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/card_padding"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current_profile"
                style="@style/BodyText" />

            <TextView
                android:id="@+id/tvCurrentProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Default"
                style="@style/SubHeaderText"
                android:textColor="@color/primary_blue" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Profiles List -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Available Profiles"
        style="@style/SubHeaderText"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/spacing_small" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProfiles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/spacing_small"
        tools:listitem="@layout/item_profile" />

    <!-- Empty State -->
    <LinearLayout
        android:id="@+id/layoutEmptyState"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_profiles"
            style="@style/BodyText"
            android:textColor="@color/text_secondary" />

    </LinearLayout>

</LinearLayout>