<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/background_light"
    tools:context=".MainActivity">

    <!-- Header -->
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        style="@style/HeaderText"
        android:gravity="center"
        android:layout_marginBottom="@dimen/spacing_large" />

    <!-- Current Profile Display -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardViewStyle"
        android:layout_marginBottom="@dimen/spacing_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/card_padding"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current_profile"
                style="@style/BodyText" />

            <TextView
                android:id="@+id/tvCurrentProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Default"
                style="@style/SubHeaderText"
                android:textColor="@color/primary_blue" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Main Action Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/spacing_medium">

        <Button
            android:id="@+id/btnNewEntry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/new_entry"
            style="@style/PrimaryButton"
            android:layout_marginBottom="@dimen/button_margin"
            android:drawableStart="@android:drawable/ic_input_add"
            android:drawablePadding="@dimen/spacing_small" />

        <Button
            android:id="@+id/btnViewEntries"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/view_entries"
            style="@style/SecondaryButton"
            android:layout_marginBottom="@dimen/button_margin"
            android:drawableStart="@android:drawable/ic_menu_view"
            android:drawablePadding="@dimen/spacing_small" />

        <Button
            android:id="@+id/btnProfileManager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/profile_manager"
            style="@style/SecondaryButton"
            android:layout_marginBottom="@dimen/button_margin"
            android:drawableStart="@android:drawable/ic_menu_manage"
            android:drawablePadding="@dimen/spacing_small" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/settings"
            style="@style/SecondaryButton"
            android:drawableStart="@android:drawable/ic_menu_preferences"
            android:drawablePadding="@dimen/spacing_small" />

    </LinearLayout>

    <!-- Quick Stats Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardViewStyle"
        android:layout_marginTop="@dimen/spacing_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Today's Summary"
                style="@style/SubHeaderText"
                android:layout_marginBottom="@dimen/spacing_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvTodayEntries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        style="@style/HeaderText"
                        android:textColor="@color/primary_blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Entries"
                        style="@style/CaptionText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvTodayHours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0"
                        style="@style/HeaderText"
                        android:textColor="@color/success_green" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hours"
                        style="@style/CaptionText" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>